about us page extended

--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -20,14 +20,14 @@
 
 <div class="container-fluid" style="padding: 3% 4%;" data-aos="zoom-in-up" data-aos-duration="1000">
     <div class="row">
-        <div class="col-6" style="width: 100%; height: 500px; overflow: hidden;">
+        <div class="col-md-6 col-sm-12" style="width: 100%; height: 500px; overflow: hidden;">
             <img src="https://asxreport.files.wordpress.com/2018/03/7b00bf2faf-f82c-4d2b-898e-ed8ec00ebbd17drefinery20image20oilgas.jpg" style="height:100%;">
         </div>
-        <div class="col-6" style="color: white; font-family: 'Roboto', sans-serif; line-height: 2;font-size: 1.8rem; font-weight:300; padding: 3% 2%;">
-            <p>Since 1984, SPE ISM STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country
-                to be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level. Its been all possible because of its strong commitment of helping students learn more
-                about the industry through offering the opportunity to network with company spokespeople, nurturing the exchange of ideas with others, and intensifying their knowledge through a plethora of educational and tech events throughout the year.
-                Till date, it's in constant engagement with the students to make them global citizens by fostering the leadership as well as the management skills.
+        <div class="col-md-6 col-sm-12" style="color: white; font-family: 'Roboto', sans-serif; line-height: 2;font-size: 1.8rem; font-weight:300; padding: 3% 2%;">
+            <p>Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the
+                country to be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level. Its been all possible because of its strong commitment of helping students
+                learn more about the industry through offering the opportunity to network with company spokespeople, nurturing the exchange of ideas with others, and intensifying their knowledge through a plethora of educational and tech events throughout
+                the year. Till date, it's in constant engagement with the students to make them global citizens by fostering the leadership as well as the management skills.
             </p>
         </div>
     </div>
@@ -37,23 +37,104 @@
     <div class="typewriter-text2">Aim of the Chapter</div>
 </div>
 
-<!-- 
-<div class="letter">
-    <p>Dear Friends,</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod porta tempor. Donec pulvinar turpis nec velit pellentesque quis rhoncus sapien facilisis. Mauris quis massa dui, rhoncus viverra quam. Nulla tempus, augue ut consectetur facilisis,
-        arcu elit pellentesque arcu, sed rutrum orci turpis pulvinar augue. Donec eget arcu mauris. Vestibulum tristique consequat lacus eget laoreet. Integer sed nisl sed nibh pulvinar ornare quis nec quam. Aenean rhoncus ligula ut lectus placerat a
-        commodo quam vulputate. In eu metus turpis.</p>
-    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus facilisis erat in nibh auctor at aliquet velit vestibulum. Curabitur turpis diam, malesuada eu consequat eget, ultricies sed nunc. Aenean sed odio massa.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare vulputate congue. Quisque leo metus, condimentum nec molestie et, egestas luctus libero.</p>
-    <p>Mauris porta odio augue. Nam turpis dui, volutpat id feugiat vitae, sagittis a justo. Nam iaculis aliquet erat non varius. Suspendisse justo arcu, tincidunt sed auctor sit amet, fermentum id turpis. Suspendisse sed enim quis lorem vestibulum fermentum
-        a ut nulla.</p>
-    <p>Nullam tincidunt elit quis nibh blandit interdum. Duis ullamcorper pellentesque pretium. Nulla facilisi. Morbi semper nisi et justo varius non fermentum metus ornare. Proin vehicula, mi vel volutpat accumsan, libero lacus euismod massa, id feugiat
-        velit enim nec ligula. Aliquam ipsum est, volutpat aliquam tincidunt id, sagittis et velit. Nunc vitae massa vel dui facilisis consectetur vel id sem.</p>
+<div class="container-fluid" style="padding: 2% 4%; padding-top: 3%; background-color: #3B547A; overflow: hidden;">
+    <div class="row">
+        <div class="col-md-6 col-sm-12" style="width: 100%; height: 500px; overflow: hidden;" data-aos="fade-right" data-aos-duration="2000">
+            <img src="https://ak.picdn.net/shutterstock/videos/9126743/thumb/1.jpg" style="height:100%;">
+        </div>
 
-    <p>Aenean pulvinar, lacus ultrices euismod viverra, nulla diam interdum ligula, id mollis mi erat quis lectus. Morbi quis felis ut turpis condimentum dictum porttitor id mauris. Nam non tincidunt mauris. Donec viverra eleifend pharetra. Nulla eu ipsum
-        et elit consectetur rutrum. Integer lorem purus, ultricies ac laoreet quis, feugiat vel dolor. Donec eu turpis neque. Nullam molestie sapien eu nibh semper sed convallis est pretium.</p>
+        <div class="col-md-6 col-sm-12" style="overflow: hidden;" data-aos="fade-left" data-aos-duration="2000">
+            <div class="blockquote-wrapper">
+                <div class="blockquote" style="padding-bottom: 28% !important;">
+                    <h1><span style="color:#D3D9E1;">
+                        "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies for the public benefit; and to provide opportunities for professionals and students to
+                        enhance their technical and professional competence."</span>
+                    </h1>
+                    <h4>SPE IIT(ISM) STUDENT CHAPTER</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
- -->
+
+<div class="container-fluid">
+    <section id=timeline style="background-color: #051631 !important">
+        <h1 style="color: white;">ACHIEVEMENTS</h1>
+        <!-- <p class="leader">All cards must be the same height and width for space calculations on large screens.</p> -->
+        <div class="demo-card-wrapper">
+            <div class="demo-card demo-card--step1" data-aos="flip-left" data-aos-duration="1500">
+                <div class="head">
+                    <div class="number-box">
+                        <span>01</span>
+                    </div>
+                    <h2 style="font-size: 15px;">OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                </div>
+                <div class="body">
+                    <p>First of its kind in India, buoyed by the department, the chapter brought wreaths globally when it won the OUTSTANDING STUDENT CHAPTER AWARD in the year 2010. The award was presented to the chapter taking in view the distinctive level
+                        of participation during a single academic session.
+                    </p>
+                    <img src="http://placehold.it/1000x500" alt="Graphic">
+                </div>
+            </div>
+
+            <div class="demo-card demo-card--step2" data-aos="flip-right" data-aos-duration="1500">
+                <div class="head">
+                    <div class="number-box">
+                        <span>02</span>
+                    </div>
+                    <h2 style="font-size: 15px;">OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                </div>
+                <div class="body">
+                    <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.
+                    </p>
+                    <img src="http://placehold.it/1000x500" alt="Graphic">
+                </div>
+            </div>
+
+            <div class="demo-card demo-card--step3" data-aos="flip-left" data-aos-duration="1500">
+                <div class="head">
+                    <div class="number-box">
+                        <span>03</span>
+                    </div>
+                    <h2>GOLD STATUS AWARD</h2>
+                </div>
+                <div class="body">
+                    <p>It has been a constant awardee of the GOLD STATUS AWARD successively in the years 2011-2014, preserving its performance in the category of membership, event planning and professionalism. </p>
+                    <img src="http://placehold.it/1000x500" alt="Graphic">
+                </div>
+            </div>
+
+            <div class="demo-card demo-card--step4" data-aos="flip-right" data-aos-duration="1500">
+                <div class="head">
+                    <div class="number-box">
+                        <span>04</span>
+                    </div>
+                    <h2>SUB REGIONAL PAPER MEET</h2>
+                </div>
+                <div class="body">
+                    <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.
+                    </p>
+                    <img src="http://placehold.it/1000x500" alt="Graphic">
+                </div>
+            </div>
+
+            <div class="demo-card demo-card--step5" data-aos="flip-left" data-aos-duration="1500">
+                <div class="head">
+                    <div class="number-box">
+                        <span>05</span>
+                    </div>
+                    <h2>social contributions</h2>
+                </div>
+                <div class="body">
+                    <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.
+                    </p>
+                    <img src="http://placehold.it/1000x500" alt="Graphic">
+                </div>
+            </div>
+
+        </div>
+    </section>
+</div>
 
 <script>
     $("#downBtn").click(function() {
