about page achievements added

--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -32,109 +32,110 @@
         </div>
     </div>
 </div>
-
-<div class="container">
-    <div class="typewriter-text2">Aim of the Chapter</div>
-</div>
-
-<div class="container-fluid" style="padding: 2% 4%; padding-top: 3%; background-color: #3B547A; overflow: hidden;">
+<div class="container-fluid aim" style="background-image: url(https://images.unsplash.com/photo-1592161589943-1ec41ef3f943?ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80); background-repeat: no-repeat; background-size: 100% 100%; padding: 3% 4%; overflow: hidden;">
+    <div style="font-family: 'Carter One', cursive; color:white; font-size:6rem; text-align:center" data-aos="zoom-in-up" data-aos-duration="1500">
+        <p>AIM OF THE CHAPTER</p>
+    </div>
     <div class="row">
-        <div class="col-md-6 col-sm-12" style="width: 100%; height: 500px; overflow: hidden;" data-aos="fade-right" data-aos-duration="2000">
-            <img src="https://ak.picdn.net/shutterstock/videos/9126743/thumb/1.jpg" style="height:100%;">
+        <div class="col-md-6 c ol-sm-12" style="padding-top: 5%;" data-aos="fade-right" data-aos-duration="1500">
+            <img src="https://lh3.googleusercontent.com/proxy/VEXmMANq3stox3uUAsldgnoZlTuws4-ISotFbbCFfdshdYU4R0Yqr7qbezn7MlAINtN-58_Wk9nWwdA3W5ewcVj4OP7-NwM" style="width: 100%; height: 500px; object-fit: cover;">
         </div>
-
-        <div class="col-md-6 col-sm-12" style="overflow: hidden;" data-aos="fade-left" data-aos-duration="2000">
-            <div class="blockquote-wrapper">
-                <div class="blockquote" style="padding-bottom: 28% !important;">
-                    <h1><span style="color:#D3D9E1;">
-                        "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies for the public benefit; and to provide opportunities for professionals and students to
-                        enhance their technical and professional competence."</span>
-                    </h1>
-                    <h4>SPE IIT(ISM) STUDENT CHAPTER</h4>
+        <div class="col-md-6 col-sm-12" data-aos="fade-left" data-aos-duration="1500">
+            <div class="card-container center" style="padding-left: 10%; padding-top: 15%; padding-right: 10%;">
+                <div class="aim-card">
+                    <h2>SPE IIT(ISM) STUDENT CHAPTER</h2>
+                    <hr/>
+                    <p style="font-size: 2rem;">The chapter is devoted to fulfilling the mission of SPE international "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies
+                        for the public benefit; and to provide opportunities for professionals and students to enhance their technical and professional competence.”</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container-fluid">
-    <section id=timeline style="background-color: #051631 !important">
-        <h1 style="color: white;">ACHIEVEMENTS</h1>
-        <!-- <p class="leader">All cards must be the same height and width for space calculations on large screens.</p> -->
-        <div class="demo-card-wrapper">
-            <div class="demo-card demo-card--step1" data-aos="flip-left" data-aos-duration="1500">
-                <div class="head">
-                    <div class="number-box">
-                        <span>01</span>
+<!-- background-color: #3B547A -->
+
+<div class="container-fluid" style="background-image: url(https://wallpapercave.com/wp/wp3157716.jpg);">
+    <div class="container-neon" style="font-family: 'Balsamiq Sans', cursive !important; overflow: hidden; padding-top:5% ;">
+        <div class="neon">Achievements of the Chapter</div>
+    </div>
+
+    <section class="timeline" style="overflow: hidden;">
+        <div class="container">
+
+            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content timeline-card js--fadeInRight">
+                    <div class="timeline-img-header">
+                        <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
                     </div>
-                    <h2 style="font-size: 15px;">OUTSTANDING STUDENT CHAPTER AWARD</h2>
-                </div>
-                <div class="body">
+                    <div class="date">Year 2010</div>
                     <p>First of its kind in India, buoyed by the department, the chapter brought wreaths globally when it won the OUTSTANDING STUDENT CHAPTER AWARD in the year 2010. The award was presented to the chapter taking in view the distinctive level
-                        of participation during a single academic session.
-                    </p>
-                    <img src="http://placehold.it/1000x500" alt="Graphic">
+                        of participation during a single academic session. </p>
                 </div>
+
             </div>
 
-            <div class="demo-card demo-card--step2" data-aos="flip-right" data-aos-duration="1500">
-                <div class="head">
-                    <div class="number-box">
-                        <span>02</span>
+            <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content timeline-card js--fadeInRight">
+                    <div class="timeline-img-header">
+                        <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
                     </div>
-                    <h2 style="font-size: 15px;">OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                    <div class="date">Year 2015</div>
+                    <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.</p>
                 </div>
-                <div class="body">
-                    <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.
-                    </p>
-                    <img src="http://placehold.it/1000x500" alt="Graphic">
-                </div>
+
             </div>
 
-            <div class="demo-card demo-card--step3" data-aos="flip-left" data-aos-duration="1500">
-                <div class="head">
-                    <div class="number-box">
-                        <span>03</span>
+
+            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content timeline-card js--fadeInRight">
+                    <div class="timeline-img-header">
+                        <h2>GOLD STATUS AWARD</h2>
                     </div>
-                    <h2>GOLD STATUS AWARD</h2>
-                </div>
-                <div class="body">
+                    <div class="date">Year 2011-2014</div>
                     <p>It has been a constant awardee of the GOLD STATUS AWARD successively in the years 2011-2014, preserving its performance in the category of membership, event planning and professionalism. </p>
-                    <img src="http://placehold.it/1000x500" alt="Graphic">
                 </div>
+
             </div>
 
-            <div class="demo-card demo-card--step4" data-aos="flip-right" data-aos-duration="1500">
-                <div class="head">
-                    <div class="number-box">
-                        <span>04</span>
+            <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content timeline-card js--fadeInRight">
+                    <div class="timeline-img-header">
+                        <h2>SUB REGIONAL PAPER MEET</h2>
                     </div>
-                    <h2>SUB REGIONAL PAPER MEET</h2>
+                    <div class="date">Year 2012 & 2016</div>
+                    <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.</p>
                 </div>
-                <div class="body">
-                    <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.
-                    </p>
-                    <img src="http://placehold.it/1000x500" alt="Graphic">
-                </div>
+
             </div>
 
-            <div class="demo-card demo-card--step5" data-aos="flip-left" data-aos-duration="1500">
-                <div class="head">
-                    <div class="number-box">
-                        <span>05</span>
+            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content timeline-card js--fadeInLeft">
+                    <div class="timeline-img-header">
+                        <h2>SOCIAL CONTRIBUTIONS</h2>
                     </div>
-                    <h2>social contributions</h2>
-                </div>
-                <div class="body">
-                    <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.
-                    </p>
-                    <img src="http://placehold.it/1000x500" alt="Graphic">
+                    <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.</p>
                 </div>
             </div>
-
         </div>
     </section>
 </div>
+
 
 <script>
     $("#downBtn").click(function() {
