--- a/SPE-website/pages/static/pages/about.css
+++ b/SPE-website/pages/static/pages/about.css
@@ -189,444 +189,419 @@ html {
 }
 
 
-/* Typewriter text2 */
-
-.typewriter-text2 {
-    border-right: solid 3px rgba(0, 255, 0, .75);
-    white-space: nowrap;
-    overflow: hidden;
-    margin: 0 auto;
-    color: white;
-    font-family: 'Balsamiq Sans', cursive;
-    font-size: 300%;
-    letter-spacing: 3.5px;
-    font-weight: 400;
-}
-
-
-/* Animation */
-
-.typewriter-text2 {
-    animation: animated-text2 5s steps(39, end) 0.75s 1 normal both, animated-cursor2 1000ms steps(29, end) infinite;
-}
-
-
-/* text animation */
-
-@keyframes animated-text2 {
-    from {
-        width: 0;
-    }
-    to {
-        width: 480px;
-    }
-}
-
-
-/* cursor animations */
-
-@keyframes animated-cursor2 {
-    from {
-        border-right-color: rgba(0, 255, 0, .75);
-    }
-    to {
-        border-right-color: transparent;
-    }
-}
-
-
 /* Aim of the chapter */
 
 
-/* center the blockquote in the page */
+/* Aim section image */
 
-.blockquote-wrapper {
+
+/* Aim of the chapter text */
+
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.card-container {
+    width: 100%;
+    min-height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    height: 100vh;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* 
+.card-container .center {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+} */
+
+.aim-card {
+    background-color: white;
+    width: auto !important;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 20px;
+    margin: 5px;
+    -webkit-box-shadow: -20px -20px 0px 0px #fb968b;
+    box-shadow: -20px -20px 0px 0px #fb968b;
+    border-radius: 10px;
+    -webkit-animation-name: shadow-show;
+    /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 1.5s;
+    /* Safari 4.0 - 8.0 */
+    animation-name: shadow-show;
+    animation-duration: 1.5s;
+    -webkit-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
+    -o-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
+    transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
+    /* custom */
+}
+
+.aim-card h1,
+.aim-card h2,
+.aim-card h3,
+.aim-card h4,
+.aim-card h5 {
+    margin: 0px;
+    padding: 0px 0px 15px 0px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 30px;
+    color: #282828;
+}
+
+.aim-card hr {
+    display: block;
+    border: none;
+    height: 3px;
+    background-color: salmon;
+    margin: 0px;
+    -webkit-animation-name: line-show;
+    /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 0.3s;
+    /* Safari 4.0 - 8.0 */
+    animation-name: line-show;
+    animation-duration: 0.3s;
+    -webkit-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
+    -o-transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
+    transition-timing-function: cubic-bezier(0.795, 0, 0.165, 1);
+    /* custom */
+}
+
+.aim-card p {
+    margin: 15px 0px 0px 0px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 100;
+    letter-spacing: -0.25px;
+    line-height: 1.25;
+    font-size: 16px;
+    word-break: break-all;
+    word-wrap: pre-wrap;
+    color: #282828;
+    -webkit-animation-name: p-show;
+    /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 1.5s;
+    /* Safari 4.0 - 8.0 */
+    animation-name: p-show;
+    animation-duration: 1.5s;
+}
+
+
+/* Safari 4.0 - 8.0 */
+
+@-webkit-keyframes line-show {
+    from {
+        margin: 0px 100px;
+    }
+    to {
+        margin: 0px;
+    }
+}
+
+
+/* Standard syntax */
+
+@keyframes line-show {
+    from {
+        margin: 0px 100px;
+    }
+    to {
+        margin: 0px;
+    }
+}
+
+
+/* Safari 4.0 - 8.0 */
+
+@-webkit-keyframes p-show {
+    from {
+        color: white;
+    }
+    to {
+        color: #282828;
+    }
+}
+
+
+/* Standard syntax */
+
+@keyframes p-show {
+    from {
+        color: white;
+    }
+    to {
+        color: #282828;
+    }
+}
+
+
+/* Safari 4.0 - 8.0 */
+
+@-webkit-keyframes shadow-show {
+    from {
+        -webkit-box-shadow: 0px 0px 0px 0px #e0e0e0;
+        box-shadow: 0px 0px 0px 0px #e0e0e0;
+    }
+    to {
+        -webkit-box-shadow: -20px -20px 0px 0px #fb968b;
+        box-shadow: -20px -20px 0px 0px #fb968b;
+    }
+}
+
+
+/* Standard syntax */
+
+@keyframes shadow-show {
+    from {
+        -webkit-box-shadow: 0px 0px 0px 0px #e0e0e0;
+        box-shadow: 0px 0px 0px 0px #e0e0e0;
+    }
+    to {
+        -webkit-box-shadow: -20px -20px 0px 0px #fb968b;
+        box-shadow: -20px -20px 0px 0px #fb968b;
+    }
+}
+
+
+/* NEON FONT */
+
+
+/* html,
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: table;
+} */
+
+
+/* @font-face {
+    font-family: 'Balsamiq Sans', cursive !important;
+    src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/707108/neon.ttf);
+} */
+
+
+/* .container-neon {
+    display: table-cell;
+    text-align: center !important;
+    vertical-align: middle;
+} */
+
+.neon {
+    font-family: 'Balsamiq Sans', cursive !important;
+    color: #FB4264;
+    font-size: 6rem;
+    line-height: 1;
+    text-shadow: 0 0 3vw #F40A35;
+    text-align: center !important;
+}
+
+.neon {
+    animation: neon 1s ease infinite;
+    -moz-animation: neon 1s ease infinite;
+    -webkit-animation: neon 1s ease infinite;
+}
+
+@keyframes neon {
+    0%,
+    100% {
+        text-shadow: 0 0 1vw #FA1C16, 0 0 3vw #FA1C16, 0 0 10vw #FA1C16, 0 0 10vw #FA1C16, 0 0 .4vw #FED128, .5vw .5vw .1vw #806914;
+        color: #FED128;
+    }
+    50% {
+        text-shadow: 0 0 .5vw #800E0B, 0 0 1.5vw #800E0B, 0 0 5vw #800E0B, 0 0 5vw #800E0B, 0 0 .2vw #800E0B, .5vw .5vw .1vw #40340A;
+        color: #806914;
+    }
+}
+
+
+/* vertical timeline */
+
+section {
+    padding: 100px 0;
+}
+
+
+/* html,
+body {
+    overflow-x: hidden;
+} */
+
+
+/* 
+body {
+    font-family: 'Roboto';
+    font-size: 17px;
+    font-weight: 400;
+    background-color: #eee;
+} */
+
+.timeline {
+    position: relative;
+}
+
+.timeline::before {
+    content: '';
+    background: #c5cae9;
+    width: 5px;
+    height: 95%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.timeline-item {
+    width: 100%;
+    margin-bottom: 70px;
+}
+
+.timeline-item:nth-child(even) .timeline-content {
+    float: right;
+    padding: 40px 30px 10px 30px;
+}
+
+.timeline-item:nth-child(even) .timeline-content .date {
+    right: auto;
+    left: 0;
+}
+
+.timeline-item:nth-child(even) .timeline-content::after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    width: 0;
+    height: 0;
+    top: 30px;
+    left: -15px;
+    border-width: 10px 15px 10px 0;
+    border-color: transparent #f5f5f5 transparent transparent;
+}
+
+.timeline-item::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.timeline-content {
+    position: relative;
+    width: 45%;
+    padding: 10px 30px;
+    border-radius: 4px;
+    background: #f5f5f5;
+    box-shadow: 0 20px 25px -15px rgba(0, 0, 0, .3);
+}
+
+.timeline-content::after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    width: 0;
+    height: 0;
+    top: 30px;
+    right: -15px;
+    border-width: 10px 0 10px 15px;
+    border-color: transparent transparent transparent #f5f5f5;
+}
+
+.timeline-img {
+    width: 30px;
+    height: 30px;
+    background: #3f51b5;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    margin-top: 25px;
+    margin-left: -15px;
+}
+
+.timeline-card {
+    padding: 0 !important;
+}
+
+.timeline-card p {
     padding: 0 20px;
 }
 
+.timeline-card a {
+    margin-left: 20px;
+}
 
-/* Blockquote main style */
+.timeline-item .timeline-img-header {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .4)), url('https://picsum.photos/1000/800/?random') center center no-repeat;
+    background-size: cover;
+}
 
-.blockquote {
+.timeline-img-header {
+    height: 200px;
     position: relative;
-    font-family: 'Barlow Condensed', sans-serif;
-    max-width: 620px;
-    margin: 80px auto;
-    align-self: center;
-}
-
-
-/* Blockquote header */
-
-.blockquote h1 {
-    font-family: 'Abril Fatface', cursive;
-    position: relative;
-    /* for pseudos */
-    color: #0F1A2B;
-    font-size: 2.8rem;
-    font-weight: normal;
-    line-height: 1;
-    margin: 0;
-    border: 2px solid #fff;
-    border: solid 8px;
-    border-radius: 20px;
-    padding: 25px;
-}
-
-
-/* Blockquote right double quotes */
-
-.blockquote h1:after {
-    content: "";
-    position: absolute;
-    border: 8px solid #0F1A2B;
-    border-radius: 0 50px 0 0;
-    width: 60px;
-    height: 60px;
-    bottom: -62px;
-    left: 50px;
-    border-bottom: none;
-    border-left: none;
-    z-index: 3;
-}
-
-.blockquote h1:before {
-    content: "";
-    position: absolute;
-    width: 80px;
-    border: 6px solid #292a2b;
-    bottom: -3px;
-    left: 50px;
-    z-index: 2;
-}
-
-
-/* increase header size after 600px */
-
-@media all and (min-width: 600px) {
-    .blockquote h1 {
-        font-size: 3rem;
-        line-height: 1.2;
-    }
-}
-
-
-/* Blockquote subheader */
-
-.blockquote h4 {
-    position: relative;
-    color: #000000;
-    font-size: 2rem;
-    font-weight: 700;
-    line-height: 1.2;
-    margin: 0;
-    padding-top: 15px;
-    z-index: 1;
-    margin-left: 150px;
-    padding-left: 12px;
-}
-
-.blockquote h4:first-letter {
-    margin-left: -12px;
-}
-
-
-/* Timeline */
-
-
-/* Media Queries */
-
-
-/* Card sizing */
-
-
-/* Colors */
-
-
-/* Calculations */
-
-
-/* Placeholders */
-
-@media (min-width: 1000px) {
-    #timeline .demo-card:nth-child(odd) .head::after,
-    #timeline .demo-card:nth-child(even) .head::after {
-        position: absolute;
-        content: "";
-        width: 0;
-        height: 0;
-        border-top: 15px solid transparent;
-        border-bottom: 15px solid transparent;
-    }
-    #timeline .demo-card:nth-child(odd) .head::before,
-    #timeline .demo-card:nth-child(even) .head::before {
-        position: absolute;
-        content: "";
-        width: 9px;
-        height: 9px;
-        background-color: #bdbdbd;
-        border-radius: 9px;
-        box-shadow: 0px 0px 2px 8px #f7f7f7;
-    }
-}
-
-
-/* Some Cool Stuff */
-
-.demo-card:nth-child(1) {
-    order: 1;
-}
-
-.demo-card:nth-child(2) {
-    order: 4;
-}
-
-.demo-card:nth-child(3) {
-    order: 2;
-}
-
-.demo-card:nth-child(4) {
-    order: 5;
-}
-
-.demo-card:nth-child(5) {
-    order: 3;
-}
-
-.demo-card:nth-child(6) {
-    order: 6;
-}
-
-
-/* Border Box */
-
-* {
-    box-sizing: border-box;
-}
-
-
-/* Fonts */
-
-body {
-    font-family: Roboto;
-}
-
-#timeline {
-    padding: 100px 0;
-    background: #f7f7f7;
-}
-
-#timeline h1 {
-    text-align: center;
-    font-size: 3rem;
-    font-weight: 200;
     margin-bottom: 20px;
 }
 
-#timeline p.leader {
-    text-align: center;
-    max-width: 90%;
-    margin: auto;
-    margin-bottom: 45px;
+.timeline-img-header h2 {
+    color: #fff;
+    position: absolute;
+    bottom: 5px;
+    left: 20px;
 }
 
-#timeline .demo-card-wrapper {
-    position: relative;
-    margin: auto;
+blockquote {
+    margin-top: 30px;
+    color: #757575;
+    border-left-color: #3f51b5;
+    padding: 0 20px;
 }
 
-@media (min-width: 1000px) {
-    #timeline .demo-card-wrapper {
-        display: flex;
-        flex-flow: column wrap;
-        width: 1170px;
-        height: 1650px;
-        margin: 0 auto;
-    }
-}
-
-#timeline .demo-card-wrapper::after {
-    z-index: 1;
-    content: "";
+.date {
+    background: #ff4081;
+    display: inline-block;
+    color: #fff;
+    padding: 10px;
     position: absolute;
     top: 0;
-    bottom: 0;
-    left: 50%;
-    border-left: 2px solid white;
+    right: 0;
 }
 
-@media (min-width: 1000px) {
-    #timeline .demo-card-wrapper::after {
-        border-left: 2px solid white;
+@media screen and (max-width: 768px) {
+    .timeline::before {
+        left: 50px;
     }
-}
-
-#timeline .demo-card {
-    position: relative;
-    display: block;
-    margin: 10px auto 80px;
-    max-width: 94%;
-    z-index: 2;
-}
-
-@media (min-width: 480px) {
-    #timeline .demo-card {
-        max-width: 60%;
-        box-shadow: 0px 1px 22px 4px rgba(0, 0, 0, 0.07);
+    .timeline .timeline-img {
+        left: 50px;
     }
-}
-
-@media (min-width: 720px) {
-    #timeline .demo-card {
-        max-width: 40%;
+    .timeline .timeline-content {
+        max-width: 100%;
+        width: auto;
+        margin-left: 70px;
     }
-}
-
-@media (min-width: 1000px) {
-    #timeline .demo-card {
-        max-width: 450px;
-        height: 400px;
-        margin: 90px;
-        margin-top: 45px;
-        margin-bottom: 45px;
+    .timeline .timeline-item:nth-child(even) .timeline-content {
+        float: none;
     }
-    #timeline .demo-card:nth-child(odd) {
-        margin-right: 45px;
+    .timeline .timeline-item:nth-child(odd) .timeline-content::after {
+        content: '';
+        position: absolute;
+        border-style: solid;
+        width: 0;
+        height: 0;
+        top: 30px;
+        left: -15px;
+        border-width: 10px 15px 10px 0;
+        border-color: transparent #f5f5f5 transparent transparent;
     }
-    #timeline .demo-card:nth-child(odd) .head::after {
-        border-left-width: 15px;
-        border-left-style: solid;
-        left: 100%;
-    }
-    #timeline .demo-card:nth-child(odd) .head::before {
-        left: 491.5px;
-    }
-    #timeline .demo-card:nth-child(even) {
-        margin-left: 45px;
-    }
-    #timeline .demo-card:nth-child(even) .head::after {
-        border-right-width: 15px;
-        border-right-style: solid;
-        right: 100%;
-    }
-    #timeline .demo-card:nth-child(even) .head::before {
-        right: 489.5px;
-    }
-    #timeline .demo-card:nth-child(2) {
-        margin-top: 180px;
-    }
-}
-
-#timeline .demo-card .head {
-    position: relative;
-    display: flex;
-    align-items: center;
-    color: #fff;
-    font-weight: 400;
-}
-
-#timeline .demo-card .head .number-box {
-    display: inline;
-    float: left;
-    margin: 15px;
-    padding: 10px;
-    font-size: 35px;
-    line-height: 35px;
-    font-weight: 600;
-    background: rgba(0, 0, 0, 0.17);
-}
-
-#timeline .demo-card .head h2 {
-    text-transform: uppercase;
-    font-size: 1.3rem;
-    font-weight: inherit;
-    letter-spacing: 0;
-    margin: 0;
-    padding-bottom: 6px;
-    line-height: 1rem;
-}
-
-@media (min-width: 480px) {
-    #timeline .demo-card .head h2 {
-        font-size: 165%;
-        line-height: 1.2rem;
-    }
-}
-
-#timeline .demo-card .head h2 span {
-    display: block;
-    font-size: 0.6rem;
-    margin: 0;
-}
-
-@media (min-width: 480px) {
-    #timeline .demo-card .head h2 span {
-        font-size: 0.8rem;
-    }
-}
-
-#timeline .demo-card .body {
-    background: #fff;
-    border: 1px solid rgba(191, 191, 191, 0.4);
-    border-top: 0;
-    padding: 15px;
-}
-
-@media (min-width: 1000px) {
-    #timeline .demo-card .body {
-        height: 315px;
-    }
-}
-
-#timeline .demo-card .body p {
-    font-size: 14px;
-    line-height: 18px;
-    margin-bottom: 15px;
-}
-
-#timeline .demo-card .body img {
-    display: block;
-    width: 100%;
-}
-
-#timeline .demo-card--step1 {
-    background-color: #46b8e9;
-}
-
-#timeline .demo-card--step1 .head::after {
-    border-color: #46b8e9;
-}
-
-#timeline .demo-card--step2 {
-    background-color: #3ee9d1;
-}
-
-#timeline .demo-card--step2 .head::after {
-    border-color: #3ee9d1;
-}
-
-#timeline .demo-card--step3 {
-    background-color: #ce43eb;
-}
-
-#timeline .demo-card--step3 .head::after {
-    border-color: #ce43eb;
-}
-
-#timeline .demo-card--step4 {
-    background-color: #4d92eb;
-}
-
-#timeline .demo-card--step4 .head::after {
-    border-color: #4d92eb;
-}
-
-#timeline .demo-card--step5 {
-    background-color: #46b8e9;
-}
-
-#timeline .demo-card--step5 .head::after {
-    border-color: #46b8e9;
 }
