fixed registration forms to store data

--- a/SPE-website/events/templates/events/registration_details.html
+++ b/SPE-website/events/templates/events/registration_details.html
@@ -19,6 +19,7 @@
                     Registraion Form
                 </legend>
                 {{r_form| crispy}}
+                {{single_form| crispy}}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-info" type="submit">Register</button>
