Fixed registration forms
1. Added url to events page
2. Added multiple event registration functionality
3. Fixed bugs so that data is now properly saved from forms.

--- a/SPE-website/events/templates/events/home.html
+++ b/SPE-website/events/templates/events/home.html
@@ -35,7 +35,7 @@
             <p class="article-content">Last date to register: {{ event.reg_date }}</p>
             {% if event.has_happened %}<p> </p>
             {% else %}
-            <a class="btn btn-info mb-4" href="#">Register now!</a>
+            <a class="btn btn-info mb-4" href="{{event.google_doc_url}}">Register now!</a>
             {%endif%}
         </article>
     {% endfor %}
