profile page added

--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -1,145 +1,153 @@
-{% extends 'pages/base.html' %} {% load static %} {% block content-blog %}
-<link rel="stylesheet" type="text/css" href="{% static 'pages/about.css' %}"> {% endblock content-blog %} {% block content %}
-<div class="hero-image" style="margin-top: -14px; overflow: hidden;">
-    <div class="hero-text">
-        <h1 style="font-size:50px; font-family: 'Carter One', cursive; font-size: 80px;" data-aos="fade-down" data-aos-duration="3000">About us</h1>
-    </div>
-    <a href="#" id="downBtn">
-        <span class="container" style="height: 24px; width: 24px; position: relative; left: 50%; top: 60%;">
-        <div class="chevron"></div>
-        <div class="chevron"></div>
-        <div class="chevron"></div>
-        <!-- <a class="down" href="#">Scroll down</a> -->
-    </span>
-    </a>
-</div>
+{% extends 'pages/base.html' %}
+{% load static %}
 
-<div class="container">
-    <div class="typewriter-text1">Who we are?</div>
-</div>
+{% block content-blog %}
+<link rel="stylesheet" type="text/css" href="{% static 'pages/about.css' %}">
+{% endblock content-blog %}
 
-<div class="container-fluid" style="padding: 3% 4%;" data-aos="zoom-in-up" data-aos-duration="1000">
-    <div class="row">
-        <div class="col-md-6 col-sm-12" style="width: 100%; height: 500px; overflow: hidden;">
-            <img src="https://asxreport.files.wordpress.com/2018/03/7b00bf2faf-f82c-4d2b-898e-ed8ec00ebbd17drefinery20image20oilgas.jpg" style="height:100%;">
+{% block content %}
+    <div class="hero-image" style="margin-top: -14px; overflow: hidden;">
+        <div class="hero-text">
+            <h1 style="font-size:50px; font-family: 'Carter One', cursive; font-size: 80px;" data-aos="fade-down" data-aos-duration="3000">About us</h1>
         </div>
-        <div class="col-md-6 col-sm-12" style="color: white; font-family: 'Roboto', sans-serif; line-height: 2;font-size: 1.8rem; font-weight:300; padding: 3% 2%;">
-            <p>Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the
-                country to be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level. Its been all possible because of its strong commitment of helping students
-                learn more about the industry through offering the opportunity to network with company spokespeople, nurturing the exchange of ideas with others, and intensifying their knowledge through a plethora of educational and tech events throughout
-                the year. Till date, it's in constant engagement with the students to make them global citizens by fostering the leadership as well as the management skills.
-            </p>
-        </div>
+        <a href="#" id="downBtn">
+            <span class="container" style="height: 24px; width: 24px; position: relative; left: 50%; top: 60%;">
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+            <!-- <a class="down" href="#">Scroll down</a> -->
+            </span>
+        </a>
     </div>
-</div>
-<div class="container-fluid aim" style="background-image: url(https://images.unsplash.com/photo-1592161589943-1ec41ef3f943?ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80); background-repeat: no-repeat; background-size: 100% 100%; padding: 3% 4%; overflow: hidden;">
-    <div style="font-family: 'Carter One', cursive; color:white; font-size:6rem; text-align:center" data-aos="zoom-in-up" data-aos-duration="1500">
-        <p>AIM OF THE CHAPTER</p>
+
+    <div class="container">
+        <div class="typewriter-text1">Who we are?</div>
     </div>
-    <div class="row">
-        <div class="col-md-6 c ol-sm-12" style="padding-top: 5%;" data-aos="fade-right" data-aos-duration="1500">
-            <img src="https://lh3.googleusercontent.com/proxy/VEXmMANq3stox3uUAsldgnoZlTuws4-ISotFbbCFfdshdYU4R0Yqr7qbezn7MlAINtN-58_Wk9nWwdA3W5ewcVj4OP7-NwM" style="width: 100%; height: 500px; object-fit: cover;">
-        </div>
-        <div class="col-md-6 col-sm-12" data-aos="fade-left" data-aos-duration="1500">
-            <div class="card-container center" style="padding-left: 10%; padding-top: 15%; padding-right: 10%;">
-                <div class="aim-card">
-                    <h2>SPE IIT(ISM) STUDENT CHAPTER</h2>
-                    <hr/>
-                    <p style="font-size: 2rem;">The chapter is devoted to fulfilling the mission of SPE international "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies
-                        for the public benefit; and to provide opportunities for professionals and students to enhance their technical and professional competence.”</p>
-                </div>
+
+    <div class="container-fluid" style="padding: 3% 4%;" data-aos="zoom-in-up" data-aos-duration="1000">
+        <div class="row">
+            <div class="col-md-6 col-sm-12" style="width: 100%; height: 500px; overflow: hidden;">
+                <img src="https://asxreport.files.wordpress.com/2018/03/7b00bf2faf-f82c-4d2b-898e-ed8ec00ebbd17drefinery20image20oilgas.jpg" style="height:100%;">
+            </div>
+            <div class="col-md-6 col-sm-12" style="color: white; font-family: 'Roboto', sans-serif; line-height: 2;font-size: 1.8rem; font-weight:300; padding: 3% 2%;">
+                <p>Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the
+                    country to be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level. Its been all possible because of its strong commitment of helping students
+                    learn more about the industry through offering the opportunity to network with company spokespeople, nurturing the exchange of ideas with others, and intensifying their knowledge through a plethora of educational and tech events throughout
+                    the year. Till date, it's in constant engagement with the students to make them global citizens by fostering the leadership as well as the management skills.
+                </p>
             </div>
         </div>
     </div>
-</div>
 
-<!-- background-color: #3B547A -->
-
-<div class="container-fluid" style="background-image: url(https://wallpapercave.com/wp/wp3157716.jpg);">
-    <div class="container-neon" style="font-family: 'Balsamiq Sans', cursive !important; overflow: hidden; padding-top:5% ;">
-        <div class="neon">Achievements of the Chapter</div>
-    </div>
-
-    <section class="timeline" style="overflow: hidden;">
-        <div class="container">
-
-            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
-                    </div>
-                    <div class="date">Year 2010</div>
-                    <p>First of its kind in India, buoyed by the department, the chapter brought wreaths globally when it won the OUTSTANDING STUDENT CHAPTER AWARD in the year 2010. The award was presented to the chapter taking in view the distinctive level
-                        of participation during a single academic session. </p>
-                </div>
-
+    <div class="container-fluid aim" style="background-image: url(https://images.unsplash.com/photo-1592161589943-1ec41ef3f943?ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80); background-repeat: no-repeat; background-size: 100% 100%; padding: 3% 4%; overflow: hidden;">
+        <div style="font-family: 'Carter One', cursive; color:white; font-size:6rem; text-align:center" data-aos="zoom-in-up" data-aos-duration="1500">
+            <p>AIM OF THE CHAPTER</p>
+        </div>
+        <div class="row">
+            <div class="col-md-6 c ol-sm-12" style="padding-top: 5%;" data-aos="fade-right" data-aos-duration="1500">
+                <img src="https://lh3.googleusercontent.com/proxy/VEXmMANq3stox3uUAsldgnoZlTuws4-ISotFbbCFfdshdYU4R0Yqr7qbezn7MlAINtN-58_Wk9nWwdA3W5ewcVj4OP7-NwM" style="width: 100%; height: 500px; object-fit: cover;">
             </div>
-
-            <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
+            <div class="col-md-6 col-sm-12" data-aos="fade-left" data-aos-duration="1500">
+                <div class="card-container center" style="padding-left: 10%; padding-top: 15%; padding-right: 10%;">
+                    <div class="aim-card">
+                        <h2>SPE IIT(ISM) STUDENT CHAPTER</h2>
+                        <hr/>
+                        <p style="font-size: 2rem;">The chapter is devoted to fulfilling the mission of SPE international "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies
+                            for the public benefit; and to provide opportunities for professionals and students to enhance their technical and professional competence.”</p>
                     </div>
-                    <div class="date">Year 2015</div>
-                    <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.</p>
-                </div>
-
-            </div>
-
-
-            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>GOLD STATUS AWARD</h2>
-                    </div>
-                    <div class="date">Year 2011-2014</div>
-                    <p>It has been a constant awardee of the GOLD STATUS AWARD successively in the years 2011-2014, preserving its performance in the category of membership, event planning and professionalism. </p>
-                </div>
-
-            </div>
-
-            <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>SUB REGIONAL PAPER MEET</h2>
-                    </div>
-                    <div class="date">Year 2012 & 2016</div>
-                    <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.</p>
-                </div>
-
-            </div>
-
-            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInLeft">
-                    <div class="timeline-img-header">
-                        <h2>SOCIAL CONTRIBUTIONS</h2>
-                    </div>
-                    <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.</p>
                 </div>
             </div>
         </div>
-    </section>
-</div>
+    </div>
+
+    <!-- background-color: #3B547A -->
+
+    <div class="container-fluid" style="background-image: url(https://wallpapercave.com/wp/wp3157716.jpg);">
+        <div class="container-neon" style="font-family: 'Balsamiq Sans', cursive !important; overflow: hidden; padding-top:5% ;">
+            <div class="neon">Achievements of the Chapter</div>
+        </div>
+
+        <section class="timeline" style="overflow: hidden;">
+            <div class="container">
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                        </div>
+                        <div class="date">Year 2010</div>
+                        <p>First of its kind in India, buoyed by the department, the chapter brought wreaths globally when it won the OUTSTANDING STUDENT CHAPTER AWARD in the year 2010. The award was presented to the chapter taking in view the distinctive level
+                            of participation during a single academic session. </p>
+                    </div>
+
+                </div>
+
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                        </div>
+                        <div class="date">Year 2015</div>
+                        <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.</p>
+                    </div>
+
+                </div>
 
 
-<script>
-    $("#downBtn").click(function() {
-        $('#textBody').scrollTop($('#textBody').scrollTop() + 20);;
-    });
-</script>
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>GOLD STATUS AWARD</h2>
+                        </div>
+                        <div class="date">Year 2011-2014</div>
+                        <p>It has been a constant awardee of the GOLD STATUS AWARD successively in the years 2011-2014, preserving its performance in the category of membership, event planning and professionalism. </p>
+                    </div>
+
+                </div>
+
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>SUB REGIONAL PAPER MEET</h2>
+                        </div>
+                        <div class="date">Year 2012 & 2016</div>
+                        <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.</p>
+                    </div>
+
+                </div>
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInLeft">
+                        <div class="timeline-img-header">
+                            <h2>SOCIAL CONTRIBUTIONS</h2>
+                        </div>
+                        <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+
+    <script>
+        $("#downBtn").click(function() {
+            $('#textBody').scrollTop($('#textBody').scrollTop() + 20);;
+        });
+    </script>
+
 {% endblock content %}
