--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -70,7 +70,7 @@
                     <li class="dropdown">
                         <a><span class="material-icons" id="AccountCircle" >account_circle</span></a>
                         <div class="dropdown-menu">
-                            <a href="#" class="dropdown-item">Profile</a>
+                            <a href="{% url 'profile-page' %}" class="dropdown-item">Profile</a>
                             <a href="{% url 'signout-page' %}" class="dropdown-item">Sign Out</a>
                         </div>
                     </li>
