--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -46,17 +46,7 @@
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li><a href="{% url 'homepage' %}" class="nav-item nav-link active">Home</a></li>
-                    <li><a href="{% url 'about-page' %}" class="nav-item nav-link">About Us</a></li>
-                    <li class="dropdown">
-                        <a href="{% url 'blog-home' %}" class="nav-item nav-link" data-toggle="dropdown">Resources</a>
-                        <div class="dropdown-menu">
-                            <a href="#" class="dropdown-item">SPE News</a>
-                            <a href="#" class="dropdown-item">Spectacular Stories</a>
-                            <a href="#" class="dropdown-item">Fact Friday</a>
-                            <a href="{% url 'blog-home' %}" class="dropdown-item">Blogs</a>
-
-                        </div>
-                    </li>
+                    <li><a href="{% url 'blog-home' %}" class="nav-item nav-link">Blogs</a></li>
                     <li class="dropdown">
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Events</a>
                         <div class="dropdown-menu">
@@ -66,6 +56,7 @@
                     </li>
                     <li><a href="#" class="nav-item nav-link">Gallery</a></li>
                     <li><a href="#" class="nav-item nav-link">Contact</a></li>
+                    <li><a href="{% url 'about-page' %}" class="nav-item nav-link">About Us</a></li>
                     {% if user.is_authenticated %}
                     <li class="dropdown">
                         <a><span class="material-icons" id="AccountCircle" >account_circle</span></a>
